--- a/package.json
+++ b/package.json
@@ -1,38 +1,48 @@
 {
-  "name": "elm-webpack-starter",
-  "description": "Webpack setup for writing Elm apps",
-  "version": "0.8.0",
-  "license": "MIT",
-  "author": "Peter Morawiec",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/moarwick/elm-webpack-starter"
-  },
-  "scripts": {
-    "start": "webpack-dev-server --hot --inline --content-base src/",
-    "build": "rimraf dist && webpack",
-    "reinstall": "rimraf node_modules && npm install && elm package install"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "bootstrap-sass": "^3.3.6",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.25.0",
-    "elm": "^0.18.0",
-    "elm-hot-loader": "^0.5.2",
-    "elm-webpack-loader": "^3.0.6",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.17.0",
-    "jquery": "^3.1.0",
-    "node-sass": "^3.7.0",
-    "postcss-loader": "^1.1.1",
-    "rimraf": "^2.5.2",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.16.0"
-  }
+    "author": "Tom Johnson",
+    "name": "crazy-eights",
+    "version": "0.0.2",
+    "description": "Crazy Eights in Elm 0.19",
+    "main": "index.js",
+    "scripts": {
+        "test": "elm-test",
+        "start": "npm run dev",
+        "dev": "webpack-dev-server --hot --colors --port 3000",
+        "build": "webpack",
+        "prod": "webpack -p"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/simonh1000/elm-webpack-starter.git"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.1.2",
+        "@babel/preset-env": "^7.1.0",
+        "babel-loader": "^8.0.4",
+        "clean-webpack-plugin": "^0.1.19",
+        "copy-webpack-plugin": "^4.5.2",
+        "css-loader": "^1.0.0",
+        "elm": "^0.19.0-bugfix2",
+        "elm-hot-webpack-loader": "^1.0.2",
+        "elm-minify": "^2.0.0",
+        "elm-test": "^0.19.0-beta10",
+        "elm-verify-examples": "^3.0.1",
+        "elm-webpack-loader": "^5.0.0",
+        "file-loader": "^2.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.4.3",
+        "node-sass": "^4.9.3",
+        "resolve-url-loader": "^3.0.0",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.0",
+        "url-loader": "^1.1.1",
+        "webpack": "^4.20.2",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.9",
+        "webpack-merge": "^4.1.4"
+    },
+    "dependencies": {
+        "materialize-css": "^1.0.0-rc.2"
+    }
 }
